@@ -5,8 +5,10 @@
 CXXFLAGS=$(CWARNINGS) $(COPTIM) $(CPEDANTIC) $(INCLUDE2)
 LIBS=$(OTHERLIBS)
 
-OBJS=AddComponentCommand.o CloseCommand.o ContinueCommand.o HelpCommand.o \
-	LoadCommand.o ListComponentsCommand.o MoveComponentCommand.o PauseCommand.o \
+OBJS=AddComponentCommand.o CloseCommand.o ContinueCommand.o \
+	CopyComponentCommand.o HelpCommand.o \
+	LoadCommand.o ListComponentsCommand.o MoveComponentCommand.o \
+	PauseCommand.o \
 	QuitCommand.o RemoveComponentCommand.o ResetCommand.o \
 	SaveCommand.o StatusCommand.o VersionCommand.o
 
